Included sdcardfs source code for kernel 3.0
Only included the source code as is for kernel 3.0. Following patches
take care of porting this file system to version 3.10.

Change-Id: I09e76db77cd98a059053ba5b6fd88572a4b75b5b
Signed-off-by: Daniel Campello <campello@google.com>

--- a/fs/sdcardfs/Kconfig
+++ b/fs/sdcardfs/Kconfig
@@ -1,6 +1,7 @@
 config SDCARD_FS
 	tristate "sdcard file system"
-	default y
+	depends on EXPERIMENTAL
+	default n
 	help
 	  Sdcardfs is based on Wrapfs file system.
 
@@ -15,10 +16,3 @@ config SDCARD_FS_CI_SEARCH
 	tristate "sdcardfs case-insensitive search support"
 	depends on SDCARD_FS
 	default y
-
-config SDCARD_FS_XATTR
-	bool "Sdcardfs extended attribute"
-	default y
-	depends on SDCARD_FS
-	help
-	  Modification of sdcard file system for xattr
