--- a/drivers/misc/Kconfig
+++ b/drivers/misc/Kconfig
@@ -526,11 +526,12 @@ config TIMA_LOG
 	help
 	  This option enables support for dumping TIMA log.
 
-config UID_CPUTIME
-	tristate "Per-UID cpu time statistics"
+config UID_SYS_STATS
+	tristate "Per-UID statistics"
 	depends on PROFILING
 	help
 	  Per UID based cpu time statistics exported to /proc/uid_cputime
+	  Per UID based io statistics exported to /proc/uid_io
 
 config KNOX_KAP
        bool "Enable KNOX KAP mode"
