staging: android: ion: Disable enum-conversion warning
Signed-off-by: Nathan Chancellor <natechancellor@gmail.com>

--- a/drivers/staging/android/ion/Makefile
+++ b/drivers/staging/android/ion/Makefile
@@ -20,3 +20,5 @@ ccflags-y += -DION_RUNTIME_DEBUGGER=1
 else
 ccflags-y += -DION_RUNTIME_DEBUGGER=0
 endif
+
+subdir-ccflags-y := $(call cc-disable-warning, enum-conversion)
