ARM: dts: grandpplte: Fix compilation error
Signed-off-by: Nguyễn Long <hoanglong.lumi404@gmail.com>

--- a/arch/arm/boot/dts/mt6737t_grandpplte_ltn_dtv_02.dts
+++ b/arch/arm/boot/dts/mt6737t_grandpplte_ltn_dtv_02.dts
@@ -12,7 +12,7 @@
 	model = "Samsung GrandPrimePlus LTE LTN DTV rev02 board based on MT6737T";
 	model_info-chip = <6735>;
 	model_info-platform = "android";
-	model_info-subtype = "mediatek";
+	model_info-subtype = "samsung";
 	model_info-hw_rev = <2>;
 	model_info-hw_rev_end = <2>;
 	compatible = "samsung, GrandPrimePlus LTE LTN DTV 02", "mediatek,MT6735";
