--- a/arch/arm/boot/dts/mt6737t_grandpplte_cis_ser_03.dts
+++ b/arch/arm/boot/dts/mt6737t_grandpplte_cis_ser_03.dts
@@ -11,7 +11,7 @@
 	model = "Samsung GrandPrimePlus LTE CIS rev03 board based on MT6737T";
 	model_info-chip = <6735>;
 	model_info-platform = "android";
-	model_info-subtype = "mediatek";
+	model_info-subtype = "samsung";
 	model_info-hw_rev = <3>;
 	model_info-hw_rev_end = <3>;
 	compatible = "samsung, GrandPrimePlus LTE CIS SER 03", "mediatek,MT6735";
