--- a/arch/arm/boot/dts/mt6737t_grandpplte_ltn_dtv_01.dts
+++ b/arch/arm/boot/dts/mt6737t_grandpplte_ltn_dtv_01.dts
@@ -12,7 +12,7 @@
 	model = "Samsung GrandPrimePlus LTE LTN DTV rev01 board based on MT6737T";
 	model_info-chip = <6735>;
 	model_info-platform = "android";
-	model_info-subtype = "mediatek";
+	model_info-subtype = "samsung";
 	model_info-hw_rev = <0>;
 	model_info-hw_rev_end = <1>;
 	compatible = "samsung, GrandPrimePlus LTE LTN DTV 01", "mediatek,MT6735";
