--- a/arch/arm/boot/dts/mt6737t_grandpplte_ltn_dtv_03.dts
+++ b/arch/arm/boot/dts/mt6737t_grandpplte_ltn_dtv_03.dts
@@ -12,7 +12,7 @@
 	model = "Samsung GrandPrimePlus LTE LTN DTV rev03 board based on MT6737T";
 	model_info-chip = <6735>;
 	model_info-platform = "android";
-	model_info-subtype = "mediatek";
+	model_info-subtype = "samsung";
 	model_info-hw_rev = <3>;
 	model_info-hw_rev_end = <3>;
 	compatible = "samsung, GrandPrimePlus LTE LTN DTV 03", "mediatek,MT6735";
