arm: configs: grandpplte: Disable MTK serial console
Signed-off-by: Nguyễn Long <hoanglong.lumi404@gmail.com>

--- a/arch/arm/configs/mt6737t-grandpplte_defconfig
+++ b/arch/arm/configs/mt6737t-grandpplte_defconfig
@@ -1280,8 +1280,8 @@ CONFIG_MTK_HIBERNATION=y
 # CONFIG_MTK_LCM_PHYSICAL_ROTATION_HW is not set
 CONFIG_MTK_TC10_FEATURE=y
 # CONFIG_MTK_GPT_COMMON is not set
-CONFIG_MTK_SERIAL=y
-CONFIG_MTK_SERIAL_CONSOLE=y
+# CONFIG_MTK_SERIAL is not set
+# CONFIG_MTK_SERIAL_CONSOLE is not set
 # CONFIG_MTK_SERIAL_MODEM_TEST is not set
 # CONFIG_MTK_SERIAL_DEBUG is not set
 # CONFIG_MTK_IRTX_SUPPORT is not set
