--- a/drivers/staging/android/Kconfig
+++ b/drivers/staging/android/Kconfig
@@ -35,7 +35,7 @@ config ANDROID_BINDER_IPC_32BIT
 config ANDROID_BINDER_DEVICES
 	string "Android Binder devices"
 	depends on ANDROID_BINDER_IPC
-	default "binder,hwbinder,vndbinder"
+	default "binder"
 	---help---
 	  Default value for the binder.devices parameter.
 
@@ -43,16 +43,6 @@ config ANDROID_BINDER_DEVICES
 	  that specifies the names of the binder device nodes that will be
 	  created. Each binder device has its own context manager, and is
 	  therefore logically separated from the other devices.
-
-config ANDROID_BINDER_IPC_SELFTEST
-	bool "Android Binder IPC Driver Selftest"
-	depends on ANDROID_BINDER_IPC
-	---help---
-	  This feature allows binder selftest to run.
-
-	  Binder selftest checks the allocation and free of binder buffers
-	  exhaustively with combinations of various buffer sizes and
-	  alignments.
 
 config ASHMEM
 	bool "Enable the Anonymous Shared Memory Subsystem"
