--- a/drivers/staging/android/Kconfig
+++ b/drivers/staging/android/Kconfig
@@ -113,6 +113,14 @@ config ANDROID_FSTAB_FAKE_SYSTEM_MNT_POINT
 	  Enabling this config on a non-patched kernel will
 	  break the system boot.
 
+config ANDROID_FSTAB_FAKE_VENDOR_BLOCK_DEVICE
+        string "Vendor block device mount path for fake DT fstab"
+        depends on ANDROID_FSTAB_FAKE
+        help
+          Set the path to the vendor block device for early mounting
+          partitions using fake DT fstab.
+          eg. "/dev/block/platform/mtk-msdc.0/11230000.msdc0/by-name/cache"
+
 config ANDROID_INTF_ALARM_DEV
 	bool "Android alarm driver"
 	depends on RTC_CLASS
