ARM: configs: grandpplte: Disable Samsung MTP
Signed-off-by: Nguyễn Long <hoanglong.lumi404@gmail.com>

--- a/arch/arm/configs/mt6737t-grandpplte_defconfig
+++ b/arch/arm/configs/mt6737t-grandpplte_defconfig
@@ -2887,7 +2887,7 @@ CONFIG_USB_F_SERIAL=y
 # CONFIG_USB_G_PRINTER is not set
 CONFIG_USB_G_ANDROID=y
 CONFIG_USB_ANDROID_SAMSUNG_COMPOSITE=y
-CONFIG_USB_ANDROID_SAMSUNG_MTP=y
+# CONFIG_USB_ANDROID_SAMSUNG_MTP is not set
 CONFIG_USB_ANDROID_SAMSUNG_SIDESYNC=y
 CONFIG_USB_DUN_SUPPORT=y
 # CONFIG_USB_ANDROID_RNDIS_DWORD_ALIGNED is not set
