--- a/arch/arm/configs/mt6737t-grandpplte_defconfig
+++ b/arch/arm/configs/mt6737t-grandpplte_defconfig
@@ -3433,10 +3433,10 @@ CONFIG_CONFIGFS_FS=y
 CONFIG_MISC_FILESYSTEMS=y
 # CONFIG_ADFS_FS is not set
 # CONFIG_AFFS_FS is not set
-CONFIG_ECRYPT_FS=y
+# CONFIG_ECRYPT_FS is not set
 # CONFIG_ECRYPT_FS_MESSAGING is not set
-CONFIG_WTL_ENCRYPTION_FILTER=y
-CONFIG_SDP=y
+# CONFIG_WTL_ENCRYPTION_FILTER is not set
+# CONFIG_SDP is not set
 # CONFIG_SDP_KEY_DUMP is not set
 CONFIG_DLP=y
 # CONFIG_HFS_FS is not set
