ARM: configs: grandpplte: Disable fake fstab
- From Q onwards there isn't usage on this. First stage init can perform early mount

--- a/arch/arm/configs/mt6737t-grandpplte_defconfig
+++ b/arch/arm/configs/mt6737t-grandpplte_defconfig
@@ -3120,10 +3120,10 @@ CONFIG_ANDROID_TIMED_OUTPUT=y
 # CONFIG_ANDROID_TIMED_GPIO is not set
 CONFIG_ANDROID_LOW_MEMORY_KILLER=y
 CONFIG_ANDROID_LOW_MEMORY_KILLER_AUTODETECT_OOM_ADJ_VALUES=y
-CONFIG_ANDROID_FSTAB_FAKE=y
-CONFIG_ANDROID_FSTAB_FAKE_SYSTEM_BLOCK_DEVICE="/dev/block/platform/mtk-msdc.0/11230000.msdc0/by-name/system"
+# CONFIG_ANDROID_FSTAB_FAKE is not set
+# CONFIG_ANDROID_FSTAB_FAKE_SYSTEM_BLOCK_DEVICE is not set
 # CONFIG_ANDROID_FSTAB_FAKE_SYSTEM_MNT_POINT is not set
-CONFIG_ANDROID_FSTAB_FAKE_VENDOR_BLOCK_DEVICE="/dev/block/platform/mtk-msdc.0/11230000.msdc0/by-name/cache"
+# CONFIG_ANDROID_FSTAB_FAKE_VENDOR_BLOCK_DEVICE is not set
 CONFIG_ANDROID_INTF_ALARM_DEV=y
 CONFIG_SYNC=y
 CONFIG_SW_SYNC=y
