--- a/arch/arm/configs/mt6737t-grandpplte_defconfig
+++ b/arch/arm/configs/mt6737t-grandpplte_defconfig
@@ -115,15 +115,20 @@ CONFIG_CGROUPS=y
 # CONFIG_CPUSETS is not set
 CONFIG_CGROUP_CPUACCT=y
 CONFIG_RESOURCE_COUNTERS=y
-# CONFIG_MEMCG is not set
+CONFIG_MEMCG=y
+CONFIG_MEMCG_SWAP=y
 # CONFIG_CGROUP_PERF is not set
 CONFIG_CGROUP_SCHED=y
 CONFIG_FAIR_GROUP_SCHED=y
 # CONFIG_CFS_BANDWIDTH is not set
-CONFIG_RT_GROUP_SCHED=y
+# CONFIG_RT_GROUP_SCHED is not set
 # CONFIG_BLK_CGROUP is not set
 # CONFIG_CHECKPOINT_RESTORE is not set
-# CONFIG_NAMESPACES is not set
+CONFIG_NAMESPACES=y
+CONFIG_UTS_NS=y
+CONFIG_USER_NS=y
+CONFIG_PID_NS=y
+CONFIG_NET_NS=y
 # CONFIG_SCHED_AUTOGROUP is not set
 # CONFIG_SYSFS_DEPRECATED is not set
 # CONFIG_RELAY is not set
@@ -1553,7 +1558,7 @@ CONFIG_MTK_ATF_LOGGER=y
 # CONFIG_SSUSB_MU3_PHY is not set
 # CONFIG_SSUSB_MTK_XHCI is not set
 # CONFIG_SSUSB_MTK_TEST_XHCI is not set
-CONFIG_MTK_MLOG=y
+# CONFIG_MTK_MLOG is not set
 CONFIG_MTK_EMI_BWL=y
 CONFIG_MTK_EMI_D1P=y
 # CONFIG_MTK_EMI_D2P is not set
@@ -3118,8 +3123,7 @@ CONFIG_ANDROID_BINDER_DEVICES="binder,hwbinder,vndbinder"
 CONFIG_ASHMEM=y
 CONFIG_ANDROID_TIMED_OUTPUT=y
 # CONFIG_ANDROID_TIMED_GPIO is not set
-CONFIG_ANDROID_LOW_MEMORY_KILLER=y
-CONFIG_ANDROID_LOW_MEMORY_KILLER_AUTODETECT_OOM_ADJ_VALUES=y
+# CONFIG_ANDROID_LOW_MEMORY_KILLER is not set
 # CONFIG_ANDROID_FSTAB_FAKE is not set
 # CONFIG_ANDROID_FSTAB_FAKE_SYSTEM_BLOCK_DEVICE is not set
 # CONFIG_ANDROID_FSTAB_FAKE_SYSTEM_MNT_POINT is not set
