--- a/arch/arm/configs/mt6737t-grandpplte_defconfig
+++ b/arch/arm/configs/mt6737t-grandpplte_defconfig
@@ -42,7 +42,7 @@ CONFIG_KERNEL_GZIP=y
 # CONFIG_KERNEL_LZO is not set
 # CONFIG_KERNEL_LZ4 is not set
 CONFIG_DEFAULT_HOSTNAME="(none)"
-CONFIG_SWAP=y
+# CONFIG_SWAP is not set
 # CONFIG_SYSVIPC is not set
 # CONFIG_POSIX_MQUEUE is not set
 CONFIG_CROSS_MEMORY_ATTACH=y
@@ -1325,7 +1325,7 @@ CONFIG_PMIC_OVP_DISABLE=y
 CONFIG_PMIC_BATTERY_THERMAL_DISABLE=y
 CONFIG_MTK_PMIC_WRAP=y
 CONFIG_MTK_SYSENV=y
-CONFIG_MTPROF=y
+# CONFIG_MTPROF is not set
 # CONFIG_MTK_LOCK_DEBUG is not set
 # CONFIG_MTPROF_CPUTIME is not set
 # CONFIG_MTK_WQ_DEBUG is not set
@@ -1435,11 +1435,11 @@ CONFIG_FOUR_KEY_HEADSET=y
 CONFIG_SEC_JACK_SYSFS=y
 CONFIG_MTK_SECURITY_SW_SUPPORT=y
 CONFIG_MTK_SEC_MODEM_NVRAM_ANTI_CLONE=y
-CONFIG_MTK_DEBUG_LATCH=y
-CONFIG_MTK_LASTPC=y
+# CONFIG_MTK_DEBUG_LATCH is not set
+# CONFIG_MTK_LASTPC is not set
 # CONFIG_MTK_LASTBUS is not set
-CONFIG_MTK_WATCHPOINT=y
-CONFIG_MTK_SYSTRACKER=y
+# CONFIG_MTK_WATCHPOINT is not set
+# CONFIG_MTK_SYSTRACKER is not set
 # CONFIG_MTK_SYSTRACKER_V2 is not set
 CONFIG_MTK_RAM_CONSOLE=y
 # CONFIG_MTK_RAM_CONSOLE_USING_SRAM is not set
@@ -1467,8 +1467,8 @@ CONFIG_MT_CPU_AFFINITY=y
 #
 # MT load balance and schedule enhancement
 #
-CONFIG_MT_LOAD_BALANCE_ENHANCEMENT=y
-CONFIG_MT_SCHED_INTEROP=y
+# CONFIG_MT_LOAD_BALANCE_ENHANCEMENT is not set
+# CONFIG_MT_SCHED_INTEROP is not set
 # CONFIG_MT_SCHED_TRACE is not set
 # CONFIG_MT_DEBUG_PREEMPT is not set
 
@@ -1571,7 +1571,7 @@ CONFIG_MTK_AEE_IPANIC=y
 # CONFIG_MTK_AEE_MRDUMP is not set
 CONFIG_MTK_THERMAL_PA_VIA_ATCMD=y
 CONFIG_MTK_RTC=y
-CONFIG_MTK_ATF_LOGGER=y
+# CONFIG_MTK_ATF_LOGGER is not set
 # CONFIG_SSUSB_DRV is not set
 # CONFIG_SSUSB_MU3_PHY is not set
 # CONFIG_SSUSB_MTK_XHCI is not set
@@ -1613,9 +1613,7 @@ CONFIG_TZDEV_IWI_PANIC=188
 # CONFIG_TZDEV_SWD_PANIC_IS_CRITICAL is not set
 # CONFIG_CONFIG_TZDEV_NWD_PANIC_ON_CLOSE is not set
 CONFIG_TZ_IW_CIRCULAR_BUFFER=y
-CONFIG_TZLOG=y
-# CONFIG_TZLOG_POLLING is not set
-CONFIG_TZLOG_PG_CNT=2
+# CONFIG_TZLOG is not set
 # CONFIG_TZPROFILER is not set
 CONFIG_TZDEV_SK_MULTICORE=y
 # CONFIG_TZDEV_MSM_CRYPTO_WORKAROUND is not set
@@ -3681,7 +3679,7 @@ CONFIG_BRANCH_PROFILE_NONE=y
 # CONFIG_RING_BUFFER_BENCHMARK is not set
 # CONFIG_RING_BUFFER_STARTUP_TEST is not set
 CONFIG_MTK_SCHED_TRACERS=y
-CONFIG_MTK_FTRACE_DEFAULT_ENABLE=y
+# CONFIG_MTK_FTRACE_DEFAULT_ENABLE is not set
 # CONFIG_MTK_KERNEL_MARKER is not set
 
 #
